# my-skills

./: *  bilibili-downloader  bilibili-subtitle  buddhist-screenwriter  gstack  logo-generator-skill  magazine-web-ppt  pptx-generator  qiaomu-design-advisor  search  write-xiaohongshu  xiaohongshu  yt-search-download
_gstack-command/: SKILL.md
agentic-coding/: SKILL.md  _meta.json  agentic-coding  handoff.md  memory-template.md  prompt-contracts.md  protocol.md  setup.md
autoplan/: SKILL.md
benchmark/: SKILL.md
benchmark-models/: SKILL.md
browse/: SKILL.md
canary/: SKILL.md
skills-vote/: LICENSE  README.md  pyproject.toml
skills-vote/examples/: evaluate.sh  recommend.sh
skills-vote/examples/recommend_skills/curlsearch/: SKILL.md
skills-vote/examples/recommend_skills/curlsearch/scripts/: search.sh
skills-vote/examples/recommend_skills/media-downloader/: SKILL.md
skills-vote/examples/recommend_skills/media-downloader/scripts/: download.py
skills-vote/examples/recommend_skills/shellgames/: SKILL.md  _meta.json
skills-vote/examples/recommend_skills/shellgames/references/: api.md  games.md
skills-vote/integration/skills/skills-vote/: SKILL.md
skills-vote/integration/skills/skills-vote/docs/: feedback_guide.md
skills-vote/integration/skills/skills-vote/scripts/: check_api_key.ps1  check_api_key.sh  download.py  feedback.py  models.py  prompt.py  recommend.py  utils.py
skills-vote/scripts/: evaluate.py  recommend.py
skills-vote/scripts/configs/: evaluate.yaml  recommend.yaml
skills-vote/src/skills_vote/: evaluate.py  query.py  recommend.py
(+193 files in other folders)
